style.css
*{
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}

body{
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 1.25fr 1fr;
}


aside{
    width: 25vw;
    height: 100vh;
}
main{
    width:50vw;
}
header {
    position: fixed;
    height: 4rem;
    padding: 0.5rem;
    background-color: #EDEDED;
    border-right: 1px solid #DCDCDC;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
#chat-list-header{
    width: 25vw;
}
header > img{
    width: 2.6rem;
    height: 2.6rem;
    border-radius: 50%;
}
#contact-list-topbar-menus{
    display: flex;
    list-style-type: none;
}
ul > li > a{
    padding: 0px 1rem;
}

#contact-list-prompt{
    padding: 4rem 0.5rem 1rem 0.5rem;
    background-color: #9DE1FE;
}
#contact-list-prompt-close{
    padding-top: 0.25rem;
    display: flex;
    justify-content: end;
    align-items: center;
}
#prompt-message-with-icon{
    display: flex;
}
.prompt a {
    color: black;
}

#contact-search-bar{
    padding: 0.4rem 0.5rem;
    border-bottom: 1px solid #EDEDED;
}
#contact-search-button{
    border: none;
    background-color: transparent;
    margin: 0rem 0.4rem;
}
#search-contact{
    padding: 0.4rem 0.5rem;
    display: flex;
    align-items: center;
    background-color: #EDEDED;
    border-radius: 0.7rem;
}
#contact-search-input{
    border:none;
    background-color: #EDEDED;
    flex-grow: 1;
}
#contact-search-input:focus{
    outline: none;
}

.contact{
    color: black;
    text-decoration: none;
    padding: 0.5rem 1.5rem;
    display: flex;
    border-bottom: 1px solid #EDEDED;
}
.contact-pfp{
    height: 3rem;
    width: 3rem;
    border-radius: 50%;
}
.chat-details{
    font-weight: 700;
    padding: 0px 0.75rem;
    flex-grow: 1;
    display: grid;
    grid-template-columns: 1fr 0.1fr;
}
.last-sent-time, .last-message{
    font-size: 0.75rem;
    color: #858585;
}
.message-count{
    text-align: center;
    font-size: 0.6rem;
    height: 1.3rem;
    width: 1.3rem;
    padding: 0.3rem;
    border-radius: 50%;
    background-color: #25D366;
    color: white;
}
.count-icons{
    display: flex;
    align-items: center;
    gap: 0.4rem;
}
.last-message{
    display: flex;
    align-items: center;
    gap: 0.2rem;
}
.contact:hover{
    background-color: #EDEDED;
}
#chat-list{
    height: calc(100vh - 12.4rem);
    overflow: auto;
}
.contact-name{
    font-weight: 700;
    font-size: 1.3rem;
}
#chat-header{
    width: 50vw;
    justify-content: start;
    gap: 1rem;
    align-items: center;
}
#chat-header-wrapper{
    flex-grow: 1;
    display: flex;
    justify-content: space-between;
}

.chat-prompt{
    text-align: center;
    background-color: #FDF4C5;
    padding: 0.5rem;
    margin: 0.75rem 1.5rem;
    border-radius: 0.5rem;
    font-size: 0.9rem;
}

#chat-date{
    font-size: 0.75rem;
    background-color: #E1F2FA;
    border-radius: 0.25rem;
    text-align: center;
    padding: 0.2rem;
    width: 3rem ;
    margin: auto;   
}
#chat-section{
    background-color:#DDDBD1;
}
#chat-wrapper{
    padding-top: 4rem;
    height: calc(100vh - 4rem);
    overflow: auto;
}
#messages{
    list-style-type: none;
}

#messages > li {
    display: flex;
}

article.message{
    max-width: 20rem;
    margin: 0.5rem;
    font-size: 1rem;
    padding: 0.5rem;
    border-radius: 0.3rem;
}

li[sent=true]{
    justify-content: end;
}
li[sent=true]>article{
    background-color: #DBF8C6;
}    
li[sent=false]>article{
    background-color: white;
}   
.message-time{
    display: flex;
    justify-content: end;
    margin-left: 1rem;
    gap: 0.15rem;
    font-size: 0.75rem;
    color:grey;
}

#write-message{
    padding: 0px 1rem;
    display: flex;
    background-color: #EDEDED;
    align-items: center;
}

#message-input{
    padding: 0px 0.5rem;
    height: 3rem;
    border: none;
    border-radius: 0.25rem;
    flex-grow: 1;
    font-size: large;
    margin: 0.5rem 1rem;
}
#contact-info-header{
    width: 25vw;
    justify-content: start;
    gap: 1rem;
    font-size: large;
    font-weight: 700;
}

figure{
    margin-top: 4rem;
    border-bottom: 0.75rem #DCDCDC solid;
}

#contact-info-pfp{
    border-radius: 50%;
    margin-top: 3rem;
    margin-left: 8rem;
}
figcaption{
    margin: 1rem;
    text-align: center;
}

#media-header{
    padding: 1rem;
    color: #38ADA2;
    font-weight: normal;
    display: flex;
    justify-content: space-between;
}
#images{
    padding: 0.5rem;
    display: flex;
    justify-content: space-around;
    border-bottom: 0.75rem #DCDCDC solid;
}
#contact-information-section{
    width: 25vw;
}
hr{
    border-top: 1px solid #DCDCDC;
    opacity: 0.5;
}
#go-down-button{
    padding: 1rem;
    text-align: center;
    z-index: 1;
    position: fixed;
    background-color: white;
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
    bottom: 5rem;
    right: calc(25vw + 0.75rem);
}
#about-desc > p{
    padding: 1rem;
}

